<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/firacode_bold"
        android:textSize="58sp"
        android:textColor="@color/green"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="10"
        android:shadowRadius="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/netwise_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/iconDesc"
        android:src="@mipmap/netwise_icon_foreground"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        style="@style/Theme.NetWise.TextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/netwise_icon"
        app:hintEnabled="false"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="2dp"
        android:elevation="6dp"
        android:translationZ="4dp"
        android:theme="@style/Theme.NetWise.TextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:ems="10"
            android:fontFamily="@font/firacode_semibold"
            android:hint="@string/usernameInput"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/startBtn"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/startBtn"
        android:backgroundTint="@color/green"
        android:textColor="@color/black"
        android:fontFamily="@font/firacode_semibold"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput"
        android:elevation="8dp"
        android:translationZ="4dp"/>

    <ToggleButton
        android:id="@+id/themeToggle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/toggle_button_icon"
        android:textOff=""
        android:textOn=""
        android:checked="false"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="#131418"
        app:layout_constraintTop_toBottomOf="@id/startBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>