<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">

    <androidx.cardview.widget.CardView
        android:id="@+id/header_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bg"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/netwise_icon_foreground" />

            <TextView
                android:id="@+id/quiz_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/result_header"
                android:fontFamily="@font/firacode_bold"
                android:textColor="@color/green"
                android:textSize="25sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/congratulations_text"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="Congratulations, Rivaldo!"
        android:textSize="25sp"
        android:fontFamily="@font/firacode_semibold"
        android:textColor="@color/font"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/header_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/score_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/congratulations_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp">
        
        <LinearLayout
            android:id="@+id/score_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp">

            <ImageView
                android:id="@+id/medal"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@mipmap/medal_foreground"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="8/10"
                android:fontFamily="@font/firacode_bold"
                android:textColor="@color/green"
                android:textSize="60sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/message_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/score_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp">

        <TextView
            android:id="@+id/final_message"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/final_message"
            android:textSize="12sp"
            android:textAlignment="center"
            android:fontFamily="@font/firacode_medium"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detailResult_btn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        android:text="@string/detail_result"
        android:textColor="@color/black"
        android:fontFamily="@font/firacode_semibold"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/message_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ToggleButton
        android:id="@+id/themeToggle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/toggle_button_icon"
        android:textOff=""
        android:textOn=""
        android:checked="false"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="#131418"
        app:layout_constraintTop_toBottomOf="@id/detailResult_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>