<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizPage">

    <androidx.cardview.widget.CardView
        android:id="@+id/header_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/netwise_icon_foreground" />

                <TextView
                    android:id="@+id/quiz_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/quiz_header"
                    android:fontFamily="@font/firacode_bold"
                    android:textColor="@color/green"
                    android:textSize="25sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_card"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_centerHorizontal="true"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/question_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 1/10"
                android:fontFamily="@font/firacode_medium"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/exit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit_btn"
                android:fontFamily="@font/firacode_medium"
                android:textColor="@color/red"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="What does ARP Spoofing aim to achieve in a network?"
                android:textAlignment="center"
                android:textSize="16sp"
                android:fontFamily="@font/firacode_regular"
                app:layout_constraintTop_toBottomOf="@id/question_num"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_1"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Disguise malicious packets as legitimate data"
                android:fontFamily="@font/firacode_regular"
                android:textSize="12sp"
                android:textColor="@color/font"
                app:layout_constraintTop_toBottomOf="@id/question_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/option_2"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Redirect network traffic to a rogue device"
                android:fontFamily="@font/firacode_regular"
                android:textSize="12sp"
                android:textColor="@color/font"
                app:layout_constraintTop_toBottomOf="@id/option_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <com.google.android.material.button.MaterialButton
                android:textAllCaps="false"
                android:id="@+id/option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Encrypt network packets for security"
                android:fontFamily="@font/firacode_regular"
                android:textSize="12sp"
                android:textColor="@color/font"
                app:layout_constraintTop_toBottomOf="@id/option_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <com.google.android.material.button.MaterialButton
                android:textAllCaps="false"
                android:id="@+id/option_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Identify all devices connected to a network"
                android:fontFamily="@font/firacode_regular"
                android:textSize="12sp"
                android:textColor="@color/font"
                app:layout_constraintTop_toBottomOf="@id/option_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/previous_btn"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green"
                android:text="@string/previous_btn"
                android:textColor="@color/font"
                android:fontFamily="@font/firacode_semibold"
                android:textSize="14sp"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/option_4"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_btn"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green"
                android:text="@string/next_btn"
                android:textColor="@color/font"
                android:fontFamily="@font/firacode_semibold"
                android:textSize="14sp"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/option_4"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>